--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nuxt"
+    "frontend-dev": "nuxt --config-file config/frontend.js",
+    "admin-dev": "nuxt --config-file config/admin.js"
   },
   "dependencies": {
-    "nuxt": "^1.3.0"
+    "@nuxtjs/axios": "^5.0.1",
+    "dotenv": "^5.0.0",
+    "less": "^3.0.1",
+    "less-loader": "^4.0.5",
+    "node-sass": "^4.7.2",
+    "nuxt": "^1.3.0",
+    "sass-loader": "^6.0.6"
   }
 }
