--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "frontend-dev": "nuxt --config-file config/frontend.js",
-    "admin-dev": "nuxt --config-file config/admin.js"
+    "frontend-dev": "cross-env HOST=0.0.0.0 PORT=3001 NODE_ENV=development nuxt --config-file config/frontend.js",
+    "admin-dev": "cross-env HOST=0.0.0.0 PORT=3000 NODE_ENV=development nuxt --config-file config/admin.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.1",
+    "cross-env": "^5.1.3",
     "dotenv": "^5.0.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
