--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^5.0.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
+    "mana-ui-toolkit": "^1.0.12",
     "node-sass": "^4.7.2",
     "nuxt": "^1.3.0",
     "sass-loader": "^6.0.6"
